# getopt-cpp

./: CMakeLists.txt  README.md  optlist.yml  run.rb  settings.yml
assets/: XCGetOpt.cpp  XCGetOpt.h  XCOptFlag.cpp  XCOptFlag.h  XCOptInt32.cpp  XCOptInt32.h  XCOptObject.cpp  XCOptObject.h  XCOptString.cpp  XCOptString.h
template/: XCListOptObject.cpp.erb  XCListOptObject.h.erb  XCOptStringXxx.cpp.erb  XCOptXxxList.h.erb
test/: main.cpp
